Added additional --add-opens to POM vm args